added user service funcs ChangeEmail, ChangeUsername, ChangePassword improved validator added rest UserInfo, Change(Email, Username, Password) endpoints
